--- a/index.html
+++ b/index.html
@@ -13,22 +13,46 @@
         <div class="top-nav">
         <input type="text" placeholder="Search">
         </div>
-    <div class= "grid-container">
-        <img  class= "grid item1"  src="photos/01.jpg">
-        <img  class= "grid item2"  src="photos/02.jpg">
-        <img  class= "grid item3"  src="photos/03.jpg">
-        <img  class= "grid item4"  src="photos/04.jpg">
-      
-        <img  class= "grid item5" src="photos/05.jpg">
-        <img  class= "grid item6" src="photos/06.jpg">
-        <img  class= "grid item7" src="photos/07.jpg">
-        <img  class= "grid item8" src="photos/08.jpg">
-       
-        <img  class= "grid item9"  src="photos/09.jpg">
-        <img  class= "grid item10"  src="photos/10.jpg">
-        <img  class= "grid item11"  src="photos/11.jpg">
-        <img  class= "grid item12"  src="photos/12.jpg">
-    </div>
+        <div class="container">
+        <div class="gallery">
+                <figure class="gallery__item gallery__item--1">
+                <img src="photos/01.jpg" class="gallery__img" alt="Image 1">
+                </figure>
+                <figure class="gallery__item gallery__item--2">
+                <img src="photos/02.jpg" class="gallery__img" alt="Image 2">
+                </figure>
+                <figure class="gallery__item gallery__item--3">
+                <img src="photos/03.jpg" class="gallery__img" alt="Image 3">
+                </figure>
+                <figure class="gallery__item gallery__item--4">
+                <img src="photos/04.jpg" class="gallery__img" alt="Image 4">
+                </figure>
+                <figure class="gallery__item gallery__item--5">
+                <img src="photos/05.jpg" class="gallery__img" alt="Image 5">
+                </figure>
+                <figure class="gallery__item gallery__item--6">
+                <img src="photos/06.jpg" class="gallery__img" alt="Image 6">
+                </figure>
+                <figure class="gallery__item gallery__item--7">
+                  <img src="photos/07.jpg" class="gallery__img" alt="Image 7">
+                </figure>
+                <figure class="gallery__item gallery__item--8">
+                  <img src="photos/08.jpg" class="gallery__img" alt="Image 8">
+                </figure>
+                <figure class="gallery__item gallery__item--9">
+                  <img src="photos/09.jpg" class="gallery__img" alt="Image 9">
+                </figure>
+                <figure class="gallery__item gallery__item--10">
+                  <img src="photos/10.jpg" class="gallery__img" alt="Image 10">
+                </figure>
+                <figure class="gallery__item gallery__item--11">
+                  <img src="photos/11.jpg" class="gallery__img" alt="Image 11">
+                </figure>
+                <figure class="gallery__item gallery__item--12">
+                  <img src="photos/12.jpg" class="gallery__img" alt="Image 12">
+                </figure>
+              </div>
+          </div>
        </body>
       </html>
 </body>
