--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
     <body>
         <div class="top-nav">
-        <input type="text" placeholder="Search">
+            <form onsubmit="event.preventDefault();" class="search-form">
+                <label for="search" class="screen-reader-text">Search</label>
+                <input id="search"
+               type="search" class="search-input" placeholder="Search">
+                <button class="search-button">Search</button>
+              </form>
         </div>
         <div class="container">
         <div class="gallery">
