--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/baguetteBox.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/baguetteBox.min.js" async></script>
     <title>Photo gallery</title>
 </head>
 <body>
@@ -13,51 +12,62 @@
         <div class="top-nav">
             <form onsubmit="event.preventDefault();" class="search-form">
                 <label for="search" class="screen-reader-text">Search</label>
-                <input id="search"
-               type="search" class="search-input" placeholder="Search">
+                <input id="search" type="search" name="search" class="search-input" placeholder="Search">
                 <button class="search-button">Search</button>
               </form>
         </div>
         <div class="container">
         <div class="gallery">
-                <figure class="gallery__item gallery__item--1">
-                <img src="photos/01.jpg" class="gallery__img" alt="Image 1">
-                </figure>
-                <figure class="gallery__item gallery__item--2">
-                <img src="photos/02.jpg" class="gallery__img" alt="Image 2">
-                </figure>
-                <figure class="gallery__item gallery__item--3">
-                <img src="photos/03.jpg" class="gallery__img" alt="Image 3">
-                </figure>
-                <figure class="gallery__item gallery__item--4">
-                <img src="photos/04.jpg" class="gallery__img" alt="Image 4">
-                </figure>
-                <figure class="gallery__item gallery__item--5">
-                <img src="photos/05.jpg" class="gallery__img" alt="Image 5">
-                </figure>
-                <figure class="gallery__item gallery__item--6">
-                <img src="photos/06.jpg" class="gallery__img" alt="Image 6">
-                </figure>
-                <figure class="gallery__item gallery__item--7">
-                  <img src="photos/07.jpg" class="gallery__img" alt="Image 7">
-                </figure>
-                <figure class="gallery__item gallery__item--8">
-                  <img src="photos/08.jpg" class="gallery__img" alt="Image 8">
-                </figure>
-                <figure class="gallery__item gallery__item--9">
-                  <img src="photos/09.jpg" class="gallery__img" alt="Image 9">
-                </figure>
-                <figure class="gallery__item gallery__item--10">
-                  <img src="photos/10.jpg" class="gallery__img" alt="Image 10">
-                </figure>
-                <figure class="gallery__item gallery__item--11">
-                  <img src="photos/11.jpg" class="gallery__img" alt="Image 11">
-                </figure>
-                <figure class="gallery__item gallery__item--12">
-                  <img src="photos/12.jpg" class="gallery__img" alt="Image 12">
-                </figure>
+                <a href="photos/01.jpg" data-caption= "I love hay bales. Took this snap on a drive through the countryside past some straw fields." class="gallery__item gallery__item--1">
+                <img src="photos/thumbnails/01.jpg" class="gallery__img" alt="Hay bales">
+                </a>
+                <a href="photos/02.jpg" data-caption="The lake was so calm today. We had a great view of the snow on the mountains from here." class="gallery__item gallery__item--2">
+                <img src="photos/thumbnails/02.jpg" class="gallery__img" alt="Lake">
+                </a>
+                <a href="photos/03.jpg" data-caption="I hiked to the top of the mountain and got this picture of the canyon and trees below." class="gallery__item gallery__item--3">
+                <img src="photos/thumbnails/03.jpg" class="gallery__img" alt="Canyon">
+                </a>
+                <a href="photos/04.jpg" data-caption="It was amazing to see an iceberg up close, it was so cold but didn’t snow today." class="gallery__item gallery__item--4">
+                <img src="photos/thumbnails/04.jpg" class="gallery__img" alt="Iceberg">
+                </a>
+                <a href="photos/05.jpg" data-caption="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."class="gallery__item gallery__item--5">
+                <img src="photos/thumbnails/05.jpg" class="gallery__img" alt="Desert">
+                </a>
+                <a href="photos/06.jpg" data-caption="Fall is coming, I love when the leaves on the trees start to change color." class="gallery__item gallery__item--6">
+                <img src="photos/thumbnails/06.jpg" class="gallery__img" alt="Fall">
+                </a>
+                <a href="photos/07.jpg" data-caption="I drove past this plantation yesterday, everything is so green!" class="gallery__item gallery__item--7">
+                  <img src="photos/07.jpg" class="gallery__img" alt="Plantation">
+                </a>
+                <a href="photos/08.jpg" data-caption="My summer vacation to the Oregon Coast. I love the sandy dunes!" class="gallery__item gallery__item--8">
+                  <img src="photos/thumbnails/08.jpg" class="gallery__img" alt="Dunes">
+                </a>
+                <a href="photos/09.jpg" data-caption="We enjoyed a quiet stroll down this countryside lane." class="gallery__item gallery__item--9">
+                  <img src="photos/thumbnails/09.jpg" class="gallery__img" alt="Countryside Lane">
+                </a>
+                <a href="photos/10.jpg" data-caption="Sunset at the coast! The sky turned a lovely shade of orange." class="gallery__item gallery__item--10">
+                  <img src="photos/thumbnails/10.jpg" class="gallery__img" alt="Sunset">
+                </a>
+                <a href="photos/11.jpg" data-caption="I did a tour of a cave today and the view of the landscape below was breathtaking." class="gallery__item gallery__item--11">
+                  <img src="photos/thumbnails/11.jpg" class="gallery__img" alt="Cave">
+                </a>
+                <a href="photos/12.jpg" data-caption="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in." class="gallery__item gallery__item--12">
+                  <img src="photos/thumbnails/12.jpg" class="gallery__img" alt="Bluebells">
+                </a>
               </div>
           </div>
+            
+                <script 
+                src="js/baguetteBox.min.js">
+                </script>
+                <script>
+                window.addEventListener('load', function() {
+                baguetteBox.run('.gallery');
+                });
+                </script>
+                <script src="js/searchFilter.js">
+                </script>
+                <script src="js/app.js"></script>​
        </body>
       </html>
 </body>
