--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/baguetteBox.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/baguetteBox.min.js" async></script>
+    <script src="js/searchFilter.js"></script>
+    <script src="js/app.js" async></script>
     <title>Photo gallery</title>
 </head>
 <body>
@@ -17,7 +20,8 @@
               </form>
         </div>
         <div class="container">
-        <div class="gallery">
+        
+            <div class="gallery">
                 <a href="photos/01.jpg" data-caption= "I love hay bales. Took this snap on a drive through the countryside past some straw fields." class="gallery__item gallery__item--1">
                 <img src="photos/thumbnails/01.jpg" class="gallery__img" alt="Hay bales">
                 </a>
@@ -56,19 +60,6 @@
                 </a>
               </div>
           </div>
-            
-                <script 
-                src="js/baguetteBox.min.js">
-                </script>
-                <script>
-                window.addEventListener('load', function() {
-                baguetteBox.run('.gallery');
-                });
-                </script>
-                <script src="js/searchFilter.js">
-                </script>
-                <script src="js/app.js"></script>​
+           ​
        </body>
       </html>
-</body>
-</html>
