--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/baguetteBox.min.css">
     <script src="js/baguetteBox.min.js" async></script>
-    <script src="js/searchFilter.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/app.js"async></script>
     <title>Photo gallery</title>
 </head>
     <body>
         <div class="container">
         <div class="top-nav">
-            <input type="search" name='search' id='search' placeholder='Search'> 
+            <input type="text" id="myInput" onkeyup="myInput()" name="myInput" placeholder='Search'> 
         </div>
 
-        <div class="gallery">
+        <div class="gallery" id="myGallery">
                 <a href="photos/01.jpg" data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
                 <img src="photos/thumbnails/01.jpg" class="gallery__img" alt="Hay bales"></a>
                 <a href="photos/02.jpg" data-caption="The lake was so calm today. We had a great view of the snow on the mountains from here.">
@@ -43,6 +43,7 @@
                   <img src="photos/thumbnails/12.jpg" class="gallery__img" alt="Bluebells"></a>
             </div>
         </div>
-        <script src="js/baguetteBox.min.js"></script>​
+        <script src="js/baguetteBox.min.js"></script>
+        <script src="js/script.js"></script>​
     </body>
       </html>
