--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="container">
         <div class="top-nav">
-            <input type="text" id="myInput" onkeyup="myInput()" name="myInput" placeholder='Search'> 
+            <input type="text" id="myInput" name="myInput"  onkeyup="myInput()" placeholder='Search'> 
         </div>
 
         <div class="gallery" id="myGallery">
